crates/agent-tui/tests/snapshots/render__approval_pending.snap
---
source: tests/render.rs
expression: d
---
 ›_  Harness Claude   Model claude-sonnet-4-6   Effort high (requested)    ! Needs approval · 00:18
────────────────────────────────────────────────────────────────────────────────────────────────────
 ▌ Fix the parser's handling of partial JSON lines.

   I'll check the parser and add a regression test.

   › Tools · 3 completed · 1 failed · 1 running

   ┌─ Permission needed ────────────────────────────────────────────────────────────┐
   │ Claude wants to run a command                                                  │
   │  npm install                                                                   │
   │ Install dependencies for the test run                                          │
   │                                                                                │
   │ [ Allow once ]  [ Deny ]                                                       │
   │ Tab to review · Enter in the composer won't answer this                        │
   └────────────────────────────────────────────────────────────────────────────────┘










────────────────────────────────────────────────────────────────────────────────────────────────────
 › Also check CRLF input.
   Approval needed — press Tab to review it. Enter here won't answer it.
 Enter send   Ctrl+J newline   Ctrl+C stop turn   / commands   Tab focus       ● Skin Graphite ▾ F2
