crates/agent-tui/tests/snapshots/render__disconnected_keeps_draft.snap
---
source: tests/render.rs
expression: d
---
 ›_  Harness Claude   Model claude-sonnet-4-6   Effort high (requested)              ✕ Disconnected
────────────────────────────────────────────────────────────────────────────────────────────────────
 ▌ Fix the parser's handling of partial JSON lines.

   I'll check the parser and add a regression test.

   › Tools · 3 completed · 1 failed · 1 stopped

   Disconnected — Claude exited (exit code 1). Transcript and draft are kept; nothing was resent.
   /new starts a new session.
   stderr:
     Error: not logged in














────────────────────────────────────────────────────────────────────────────────────────────────────
 › Also check CRLF input.

 Enter send   Ctrl+J newline   Ctrl+Q quit   / commands   Tab focus             ● Skin Dracula ▾ F2
