crates/agent-tui/tests/snapshots/render__duke_narrow_falls_back_to_text_badge.snap
---
source: tests/render.rs
expression: d
---
 ›_  Claude   claude-sonnet-4…   high (requested) ✓ Ready
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

     ▀▀▀▀▀▀▀▀▀▀▀▀     Hail to the king, baby.
     ▀▀▀▀▀▀▀▀▀▀▀▀     It's time to kick ass and chew
     ▀▀▀▀▀▀▀▀▀▀▀▀     bubble gum…
   ▄▄▀▀▀▀▀▀▀▀▀▀▀▀▄▄
   ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀   Start a conversation in this
     ▀▀▀▀▀▀▀▀▀▀▀▀     project. Your agent can read files,
                      make changes and run commands.

                      ✓ Connected · Claude · example




━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
 › Message your agent, or / for commands

 Enter send   Ctrl+J newline    ● Skin Duke Nukem 3D ▾ F2
