crates/agent-tui/tests/snapshots/render__narrow_working_keeps_composer_and_drops_hints.snap
---
source: tests/render.rs
expression: d
---
 ›_  Claude   claude-…   high (requested) ● Working · 00:18
────────────────────────────────────────────────────────────
 ▌ Fix the parser's handling of partial JSON lines.

   I'll check the parser and add a regression test.

   › Tools · 3 completed · 1 failed · 1 running









────────────────────────────────────────────────────────────
 › Also check CRLF input.
   Draft saved · waiting for current turn
 Enter send   Ctrl+J newline           ● Skin Graphite ▾ F2
