crates/agent-tui/tests/snapshots/render__stopped_turn.snap
---
source: tests/render.rs
expression: d
---
 ›_  Harness Claude   Model claude-sonnet-4-6   Effort high (requested)                     ✓ Ready
────────────────────────────────────────────────────────────────────────────────────────────────────
 ▌ Fix the parser's handling of partial JSON lines.

   I'll check the parser and add a regression test.

   › Tools · 3 completed · 1 failed · 1 stopped

   ■ Turn stopped

















────────────────────────────────────────────────────────────────────────────────────────────────────
 › Also check CRLF input.

 Enter send   Ctrl+J newline   Ctrl+Q quit   / commands   Tab focus                ● Skin Nord ▾ F2
