crates/agent-tui/tests/snapshots/render__welcome_graphite.snap
---
source: tests/render.rs
expression: dump(&buf)
---
 ›_  Harness Claude   Model claude-sonnet-4-6   Effort high (requested)                     ✓ Ready
────────────────────────────────────────────────────────────────────────────────────────────────────






   Ready when you are
   What are we building?

   Start a conversation in this project. Your agent can read files, make changes and run commands.

   ✓ Connected · Claude · example












────────────────────────────────────────────────────────────────────────────────────────────────────
 › Message your agent, or / for commands

 Enter send   Ctrl+J newline   Ctrl+Q quit   / commands   Tab focus            ● Skin Graphite ▾ F2
