crates/agent-tui/tests/snapshots/render__welcome_matrix.snap
---
source: tests/render.rs
expression: d
---
 ›_  Harness Claude   Model claude-sonnet-4-6   Effort high (requested)                     ✓ Ready
────────────────────────────────────────────────────────────────────────────────────────────────────






   I know kung fu.
   Never send a human to do a machine's job.

   Start a conversation in this project. Your agent can read files, make changes and run commands.

   ✓ Connected · Claude · example












────────────────────────────────────────────────────────────────────────────────────────────────────
 › Message your agent, or / for commands

 Enter send   Ctrl+J newline   Ctrl+Q quit   / commands   Tab focus              ● Skin Matrix ▾ F2
