crates/agent-tui/tests/snapshots/render__working_tools_collapsed.snap
---
source: tests/render.rs
expression: d
---
 ›_  Harness Claude   Model claude-sonnet-4-6   Effort high (requested)           ● Working · 00:18
────────────────────────────────────────────────────────────────────────────────────────────────────
 ▌ Fix the parser's handling of partial JSON lines.

   I'll check the parser and add a regression test.

   › Tools · 3 completed · 1 failed · 1 running



















────────────────────────────────────────────────────────────────────────────────────────────────────
 › Also check CRLF input.
   Draft saved · waiting for current turn
 Enter send   Ctrl+J newline   Ctrl+C stop turn   / commands   Tab focus       ● Skin Graphite ▾ F2
